# mini-webrtc-rs

./: .gitignore  Cargo.toml  DEV.md  README.md  ty.toml
browser-app/: index.html  package.json  pnpm-lock.yaml
browser-app/src/: App.tsx
common/: Cargo.toml
common/src/: buffer.rs  error.rs
dtls/: Cargo.toml
dtls/src/: buffer.rs  change_cipher_sec.rs  cipher_suite.rs  common.rs  crypto.rs  extension.rs  handshake.rs  lib.rs  main.rs  manager.rs  record_header.rs
dtls/src/extensions/: mod.rs  renegotiation_info.rs  supported_groups.rs  use_extended_master_secret.rs  use_srtp.rs
dtls/src/handshake/: certificate.rs  certificate_request.rs  certificate_verify.rs  client_hello.rs  client_key_exchange.rs  context.rs  finished.rs  header.rs  hello_verify_request.rs  message_queue.rs  mod.rs  random.rs  server_hello.rs  server_hello_done.rs  server_key_exchange.rs
dtls/tests/: openssl_interop.rs
lab/: captured_srtp_gcm128.pcap  captured_srtp_gcm128_encrypted.pcap  captured_srtp_gcm128_plain.pcap  main.py  pyproject.toml  srtp_test_keys.txt  verify_capture_pairs.py
lab/webrtc-example/: index.html  package.json  pnpm-lock.yaml  sdpoffer.json
lab/webrtc-example/src/: App.tsx
mini-webrtc-derive/: Cargo.toml
mini-webrtc-derive/src/: lib.rs
src/: error.rs  event_loop.rs  ice.rs  internal_event.rs  lib.rs  main.rs  media_stream_track.rs  media_track.rs  peer_connection.rs  rtc_event.rs  rtc_peer_connection.rs  rtc_sctp.rs  sdp.rs  signaling_server.rs  stun.rs  udp_server.rs
src/common/: buffer.rs  error.rs  mod.rs
src/data_channel/: dcep.rs  mod.rs
src/dtls/: buffer.rs  change_cipher_sec.rs  cipher_suite.rs  common.rs  crypto.rs  main.rs  manager.rs  mod.rs  record_header.rs
src/dtls/extensions/: mod.rs  renegotiation_info.rs  supported_groups.rs  use_extended_master_secret.rs  use_srtp.rs
src/dtls/handshake/: certificate.rs  certificate_request.rs  certificate_verify.rs  client_hello.rs  client_key_exchange.rs  context.rs  finished.rs  header.rs  hello_verify_request.rs  mod.rs  random.rs  server_hello.rs  server_hello_done.rs  server_key_exchange.rs
src/sctp/: manager.rs  mod.rs  packet.rs
src/sctp/chunk/: cookie_ack.rs  cookie_echo.rs  data.rs  init.rs  init_ack.rs  mod.rs  sack.rs
src/srtp/: crypto.rs  header.rs  manager.rs  mod.rs  packet.rs  protection_profile.rs
srtp/: Cargo.toml
srtp/src/: crypto.rs  header.rs  lib.rs  packet.rs
