[package]
name = "mini-webrtc-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
axum = "0.8.8"
hmac = "0.12.1"
local-ip-address = "0.6.10"
mini-webrtc-derive = { path = "mini-webrtc-derive" }
rand = { version= "0.9.2", features = ["thread_rng"] }
rcgen = "0.14.6"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
