[package]
name = "mini-webrtc-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
mini-webrtc-derive = { path = "mini-webrtc-derive" }

aes = "0.9.0"
aes-gcm = "0.10.3"
anyhow = "1.0.102"
axum = "0.8.8"
crc = "3.4.0"
hmac = "0.13.0"
local-ip-address = "0.6.10"
p256 = "0.13.2"
rand = { version= "0.10.1", features = ["thread_rng"] }
rcgen = "0.14.7"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.11.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
x509-parser = "0.18.1"

[dev-dependencies]
etherparse = "0.16"
pcap-file = "2.0"
