[package]
name = "dtls"
version = "0.1.0"
edition = "2024"

[dependencies]
mini-webrtc-derive = { workspace = true }
common = { workspace = true }

anyhow = {workspace = true}
aes-gcm = {workspace = true}
hmac = {workspace = true}
sha2 = {workspace = true}
x25519-dalek = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
rcgen = {workspace = true}
tokio = {workspace = true}
p256 = {workspace = true}
x509-parser = {workspace = true}
